fixed title issue on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -64,6 +64,7 @@ li {
 
 @media only screen and (min-width: 40em) {
 	h1 {
+		line-height: 1.25em;
 		font-size: 3.5em;
 	}
 	#main-title {
